fixed extra margin below text

--- a/localized/src/components/Bubble.css
+++ b/localized/src/components/Bubble.css
@@ -4,6 +4,9 @@
 }
 }
 
+h2{
+  margin-bottom: 0;
+}
 
 .blueButton{
   width: 200px;
